force-app/main/default/objects/JMS_Equipment_Request_Approvers__mdt/JMS_Equipment_Request_Approvers__mdt.object-meta.xml
<CustomObject>
    <label>Equipment Request Approvers</label>
    <pluralLabel>Equipment Request Approvers</pluralLabel>
</CustomObject>