force-app/main/default/objects/JMS_Equipment_Request_Approvers__mdt/fields/JMS_Equipment_Integrity_Email__c.field-meta.xml
<CustomField>
    <fullName>JMS_Equipment_Integrity_Email__c</fullName>
    <label>Equipment Integrity Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>