force-app/main/default/objects/JMS_Equipment_Request_Approvers__mdt/fields/JMS_User_Role__c.field-meta.xml
<CustomField>
    <fullName>JMS_User_Role__c</fullName>
    <label>User Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>