force-app/main/default/objects/JMS_Equipment_Request_Approvers__mdt/listViews/JMS_Equipment_Request_Approvers.listView-meta.xml
<ListView>
    <fullName>JMS_Equipment_Request_Approvers</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>JMS_NAM_Email__c</columns>
    <columns>JMS_NAM_Approver_Name__c</columns>
    <columns>JMS_Equipment_Integrity_Email__c</columns>
    <columns>JMS_Equipment_Integrity_Approver_Name__c</columns>
    <columns>JMS_User_Role__c</columns>
    <filterScope>Everything</filterScope>
    <label>Equipment Request Approvers</label>
</ListView>